# vlc-openclaw

./: .gitignore  2b3-audit-2026-05-04.md  2b3-soul-identity-audit-2026-05-04.md  AGENTS.md  AGENT_ARCHITECTURE.md  CLAUDE.md  GRAILZEE_SYSTEM_STATE.md  KNOWN_ISSUES.md  Makefile  NutriOS_v2_Build_Brief_v2.md  NutriOS_v2_Build_Brief_v2_Extension_v3.md  NutriOS_v2_Build_Review_Step_5.md  NutriOS_v2_Build_Review_Step_6_6.6.md  NutriOS_v2_Build_Review_Steps_1-3.md  NutriOS_v2_Build_Summary_Step_5.md  NutriOS_v2_Build_Summary_Step_6.5.md  NutriOS_v2_Build_Summary_Step_6_6.6.md  NutriOS_v2_Build_Summary_Steps_1-3.md  NutriOS_v2_Corrective_Review_Step_5.md  NutriOS_v2_Corrective_Review_Steps_1-3.md  NutriOS_v2_Corrective_Summary_Step_5.md  NutriOS_v2_Corrective_Summary_Steps_1-3.md  SKILL_LESSONS.md  SUPERVISOR_ROLE.md  Session5_Close.md  TOOLS.md  Vardalux_Listing_Pipeline_Decomposition_Spec.md  agent_api_integration_pattern.md  boot.md  claude.md  model_tier_decisions.md  pipeline  progress.md  pytest.ini  update_openclaw_config.py  vlc_openclaw_Infra_Review_Makefile.md  vlc_openclaw_Infra_Review_make_test_scope.md  vlc_openclaw_Infra_Summary_Makefile.md  vlc_openclaw_Infra_Summary_make_test_scope.md
gtd-workspace/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  README.md  SETUP.md  SKILL.md  SOUL.md  TESTING.md  TOOLS.md  USER.md  VOICE-INTEGRATION.md  gtd-claude-implementation-packet-v2.md  openclaw.json  pipeline.md  progress.md  pyproject.toml
gtd-workspace/.openclaw/: workspace-state.json
gtd-workspace/capabilities/: calendar_read.md  capture.md  query_ideas.md  (+4 more)
(+650 files in other folders)
